--- a/OccludedLibrary/docs/latex/annotated.tex
+++ b/OccludedLibrary/docs/latex/annotated.tex
@@ -5,7 +5,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attribute__buffer__factory}{occluded\+::buffers\+::attribute\+\_\+buffer\+\_\+factory} }{\pageref{classoccluded_1_1buffers_1_1attribute__buffer__factory}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{occluded\+::buffers\+::attributes\+::attribute\+\_\+map} }{\pageref{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1utilities_1_1files_1_1file__reader}{occluded\+::utilities\+::files\+::file\+\_\+reader} }{\pageref{classoccluded_1_1utilities_1_1files_1_1file__reader}}{}
-\item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}{occluded\+::opengl\+::retained\+::gl\+\_\+attribute\+\_\+buffer} }{\pageref{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}{occluded\+::opengl\+::retained\+::gl\+\_\+attribute\+\_\+buffer} \\*A wrapper class for an Open\+G\+L buffer }{\pageref{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1interleaved__attr__buffer}{occluded\+::buffers\+::interleaved\+\_\+attr\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1interleaved__attr__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1segregated__attr__buffer}{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1segregated__attr__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}{occluded\+::opengl\+::retained\+::shaders\+::shader} \\*A wrapper class for an Open\+G\+L shader }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}}{}
