--- a/OccludedLibrary/docs/latex/classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program.tex
+++ b/OccludedLibrary/docs/latex/classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program.tex
@@ -15,18 +15,16 @@ A wrapper class for an Open\+G\+L G\+L\+S\+L shader program.
 \item 
 \hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_a940103083cf5b991c8de690748311dc3}{shader\+\_\+program} ()
 \begin{DoxyCompactList}\small\item\em Creates an empty shader program that cannot be used for rendering. \end{DoxyCompactList}\item 
-\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_ab866c58d6541142d873e0ec532fd194a}{shader\+\_\+program} (const std\+::vector$<$ \hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}{shader} $>$ \&shaders)
+\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_ac6459ada0453594a47d1294591d26fc5}{shader\+\_\+program} (const std\+::vector$<$ const boost\+::shared\+\_\+ptr$<$ const \hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}{shader} $>$ $>$ \&shaders)
 \begin{DoxyCompactList}\small\item\em Creates and initializes a Open\+G\+L G\+L\+S\+L shader program. \end{DoxyCompactList}\item 
 void \hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_a92731484e3b37d25b3dc66a3a1871d2e}{use\+\_\+program} () const 
 \begin{DoxyCompactList}\small\item\em Tells Open\+G\+L to use the shader program. \end{DoxyCompactList}\item 
 const G\+Luint \hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_a5824dc0a31ac6e1100cfa0677e309020}{get\+\_\+id} () const 
 \begin{DoxyCompactList}\small\item\em Gets the id of the shader program. \end{DoxyCompactList}\item 
-\hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_af713d427fa3e7a05ccee96cee435a100}{const bool {\bfseries is\+\_\+linked} () const }\label{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_af713d427fa3e7a05ccee96cee435a100}
-
-\item 
-\hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_af2eb6bffe5e771bf47013086ace9d16f}{const std\+::string \& {\bfseries get\+\_\+error\+\_\+log} () const }\label{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_af2eb6bffe5e771bf47013086ace9d16f}
-
-\end{DoxyCompactItemize}
+const bool \hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_abe39aa226fb93ad1ad81ff518a40ebb7}{is\+\_\+linked} () const 
+\begin{DoxyCompactList}\small\item\em Returns true if the shader program is linked. \end{DoxyCompactList}\item 
+const std\+::string \& \hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_aec76ef71a76e73b398d73b8467ff6bca}{get\+\_\+error\+\_\+log} () const 
+\begin{DoxyCompactList}\small\item\em Gets the error log of the shader program. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
@@ -46,26 +44,40 @@ A wrapper class for an Open\+G\+L G\+L\+S\+L shader program. Used to create, att
 
 Creates an empty shader program that cannot be used for rendering. 
 
-Create an empty shader program that cannot be used for rendering. This is used to make it easier for the programmer to use and not violate the programming standards of his/her project. \hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_ab866c58d6541142d873e0ec532fd194a}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!shader\+\_\+program@{shader\+\_\+program}}
+Create an empty shader program that cannot be used for rendering. This is used to make it easier for the programmer to use and not violate the programming standards of his/her project. \hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_ac6459ada0453594a47d1294591d26fc5}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!shader\+\_\+program@{shader\+\_\+program}}
 \index{shader\+\_\+program@{shader\+\_\+program}!occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}}
 \subsubsection[{shader\+\_\+program}]{\setlength{\rightskip}{0pt plus 5cm}occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program\+::shader\+\_\+program (
 \begin{DoxyParamCaption}
-\item[{const std\+::vector$<$ {\bf shader} $>$ \&}]{shaders}
+\item[{const std\+::vector$<$ const boost\+::shared\+\_\+ptr$<$ const {\bf shader} $>$ $>$ \&}]{shaders}
 \end{DoxyParamCaption}
-)}}\label{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_ab866c58d6541142d873e0ec532fd194a}
+)}}\label{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_ac6459ada0453594a47d1294591d26fc5}
 
 
 Creates and initializes a Open\+G\+L G\+L\+S\+L shader program. 
 
 
 \begin{DoxyParams}{Parameters}
-{\em shaders} & A vector of shaders that will be attached to the shader program.\\
+{\em shaders} & A vector of shader\+\_\+ptrs to shaders that will be attached to the shader program.\\
 \hline
 \end{DoxyParams}
-Creates a shader program, attaches the shaders in the shaders vector, and links the shader program. If everything works correctly the shader program can be used for rendering. If a problem occurs the an exception will be raised by this constructor. 
+Creates a shader program, attaches the shaders in the shaders vector, and links the shader program. If everything works correctly the shader program can be used for rendering. If a problem occurs, the error log will be populated and an exception will be raised by this constructor. 
 
 \subsection{Member Function Documentation}
-\hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_a5824dc0a31ac6e1100cfa0677e309020}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!get\+\_\+id@{get\+\_\+id}}
+\hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_aec76ef71a76e73b398d73b8467ff6bca}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!get\+\_\+error\+\_\+log@{get\+\_\+error\+\_\+log}}
+\index{get\+\_\+error\+\_\+log@{get\+\_\+error\+\_\+log}!occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}}
+\subsubsection[{get\+\_\+error\+\_\+log}]{\setlength{\rightskip}{0pt plus 5cm}occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program\+::get\+\_\+error\+\_\+log (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+) const}}\label{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_aec76ef71a76e73b398d73b8467ff6bca}
+
+
+Gets the error log of the shader program. 
+
+\begin{DoxyReturn}{Returns}
+Returns a reference to the string containing the error log of the shader program
+\end{DoxyReturn}
+Returns a reference to a string containing the error log of the shader program if the shader program encountered problems during the linking stage. If the program has been properly linked, this function will throw an exception. Used to easily determine what the errors during the linking process are. \hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_a5824dc0a31ac6e1100cfa0677e309020}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!get\+\_\+id@{get\+\_\+id}}
 \index{get\+\_\+id@{get\+\_\+id}!occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}}
 \subsubsection[{get\+\_\+id}]{\setlength{\rightskip}{0pt plus 5cm}occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program\+::get\+\_\+id (
 \begin{DoxyParamCaption}
@@ -82,7 +94,21 @@ Returns the id of the Open\+G\+L G\+L\+S\+L shader program.
 Returns the id of the Open\+G\+L G\+L\+S\+L shader program. This function will throw an exception if the shader program was not properly linked. This can be but should not be used to make a call to gl\+Use\+Program. Should be used for getting or binding the location of attributes and uniforms. \begin{DoxyWarning}{Warning}
 Do not use for making a call to gl\+Delete\+Program because it will cause an error when the deconstructor tries to delete the program. 
 \end{DoxyWarning}
-\hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_a92731484e3b37d25b3dc66a3a1871d2e}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!use\+\_\+program@{use\+\_\+program}}
+\hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_abe39aa226fb93ad1ad81ff518a40ebb7}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!is\+\_\+linked@{is\+\_\+linked}}
+\index{is\+\_\+linked@{is\+\_\+linked}!occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}}
+\subsubsection[{is\+\_\+linked}]{\setlength{\rightskip}{0pt plus 5cm}occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program\+::is\+\_\+linked (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+) const}}\label{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_abe39aa226fb93ad1ad81ff518a40ebb7}
+
+
+Returns true if the shader program is linked. 
+
+\begin{DoxyReturn}{Returns}
+Returns a boolean which is true if the program has been properly linked, and false otherwise.
+\end{DoxyReturn}
+Returns true if the shader program has been properly linked, and false if a problem occured during the attaching or linking of shaders. Used to quickly detemine if it is safe to call other functions of the shader program. \hypertarget{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program_a92731484e3b37d25b3dc66a3a1871d2e}{\index{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}!use\+\_\+program@{use\+\_\+program}}
 \index{use\+\_\+program@{use\+\_\+program}!occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program@{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program}}
 \subsubsection[{use\+\_\+program}]{\setlength{\rightskip}{0pt plus 5cm}occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program\+::use\+\_\+program (
 \begin{DoxyParamCaption}
