Finished non-tested shader_attribute_map class, and updated doxygen documentation

--- a/OccludedLibrary/docs/latex/classoccluded_1_1buffers_1_1attributes_1_1attribute.tex
+++ b/OccludedLibrary/docs/latex/classoccluded_1_1buffers_1_1attributes_1_1attribute.tex
@@ -24,6 +24,9 @@
 \item 
 \hypertarget{classoccluded_1_1buffers_1_1attributes_1_1attribute_a53b604a3b38c68892bb8691f89dd78dd}{const bool {\bfseries is\+\_\+normalized} () const }\label{classoccluded_1_1buffers_1_1attributes_1_1attribute_a53b604a3b38c68892bb8691f89dd78dd}
 
+\item 
+\hypertarget{classoccluded_1_1buffers_1_1attributes_1_1attribute_a4e5897c884ac34635613576b633189e7}{const bool {\bfseries operator==} (const \hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute}{attribute} \&other) const }\label{classoccluded_1_1buffers_1_1attributes_1_1attribute_a4e5897c884ac34635613576b633189e7}
+
 \end{DoxyCompactItemize}
 
 
