--- a/OccludedLibrary/docs/latex/classoccluded_1_1buffers_1_1attributes_1_1attribute__map.tex
+++ b/OccludedLibrary/docs/latex/classoccluded_1_1buffers_1_1attributes_1_1attribute__map.tex
@@ -31,6 +31,12 @@
 \item 
 \hypertarget{classoccluded_1_1buffers_1_1attributes_1_1attribute__map_afc2dc57c1bdc2dd5f82a145925243642}{const bool {\bfseries being\+\_\+defined} () const }\label{classoccluded_1_1buffers_1_1attributes_1_1attribute__map_afc2dc57c1bdc2dd5f82a145925243642}
 
+\item 
+\hypertarget{classoccluded_1_1buffers_1_1attributes_1_1attribute__map_aa27a4acfbc32c8a9545c2e4aad8fdd12}{const bool {\bfseries operator==} (const \hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{attribute\+\_\+map} \&other) const }\label{classoccluded_1_1buffers_1_1attributes_1_1attribute__map_aa27a4acfbc32c8a9545c2e4aad8fdd12}
+
+\item 
+\hypertarget{classoccluded_1_1buffers_1_1attributes_1_1attribute__map_a3bb49b4c1ca9895883d1b76a0431e7d6}{const bool {\bfseries operator!=} (const \hyperlink{classoccluded_1_1buffers_1_1attributes_1_1attribute__map}{attribute\+\_\+map} \&other) const }\label{classoccluded_1_1buffers_1_1attributes_1_1attribute__map_a3bb49b4c1ca9895883d1b76a0431e7d6}
+
 \end{DoxyCompactItemize}
 
 
