--- a/OccludedLibrary/docs/latex/dir_ab2ce609b7a18fd0d99181366bfd6a18.tex
+++ b/OccludedLibrary/docs/latex/dir_ab2ce609b7a18fd0d99181366bfd6a18.tex
@@ -8,6 +8,10 @@ file {\bfseries shader.\+cpp}
 \item 
 file {\bfseries shader.\+h}
 \item 
+file {\bfseries shader\+\_\+attribute\+\_\+map.\+cpp}
+\item 
+file {\bfseries shader\+\_\+attribute\+\_\+map.\+h}
+\item 
 file {\bfseries shader\+\_\+program.\+cpp}
 \item 
 file {\bfseries shader\+\_\+program.\+h}
