--- a/OccludedLibrary/docs/latex/annotated.tex
+++ b/OccludedLibrary/docs/latex/annotated.tex
@@ -9,5 +9,6 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1interleaved__attr__buffer}{occluded\+::buffers\+::interleaved\+\_\+attr\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1interleaved__attr__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1buffers_1_1segregated__attr__buffer}{occluded\+::buffers\+::segregated\+\_\+attr\+\_\+buffer} }{\pageref{classoccluded_1_1buffers_1_1segregated__attr__buffer}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}{occluded\+::opengl\+::retained\+::shaders\+::shader} \\*A wrapper class for an Open\+G\+L shader }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}}{}
+\item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+attribute\+\_\+map} \\*Handles the mapping of attributes in an attribute map to those in a shader program }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}}{}
 \item\contentsline{section}{\hyperlink{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}{occluded\+::opengl\+::retained\+::shaders\+::shader\+\_\+program} \\*A wrapper class for an Open\+G\+L G\+L\+S\+L shader program }{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}}{}
 \end{DoxyCompactList}
