--- a/OccludedLibrary/docs/latex/hierarchy.tex
+++ b/OccludedLibrary/docs/latex/hierarchy.tex
@@ -11,5 +11,6 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{occluded\+:\+:utilities\+:\+:files\+:\+:file\+\_\+reader}{\pageref{classoccluded_1_1utilities_1_1files_1_1file__reader}}{}
 \item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:gl\+\_\+attribute\+\_\+buffer}{\pageref{classoccluded_1_1opengl_1_1retained_1_1gl__attribute__buffer}}{}
 \item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:shaders\+:\+:shader}{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader}}{}
+\item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:shaders\+:\+:shader\+\_\+attribute\+\_\+map}{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__attribute__map}}{}
 \item \contentsline{section}{occluded\+:\+:opengl\+:\+:retained\+:\+:shaders\+:\+:shader\+\_\+program}{\pageref{classoccluded_1_1opengl_1_1retained_1_1shaders_1_1shader__program}}{}
 \end{DoxyCompactList}
